--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "swagger-autogen": "node ./swagger.js",
     "start": "NODE_ENV=production node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
